Added New Releases Page

--- a/MusicPlayerApp/MusicPlayerApp.csproj
+++ b/MusicPlayerApp/MusicPlayerApp.csproj
@@ -82,6 +82,9 @@
 	  <MauiXaml Update="Views\LoginView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\NewReleasesView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
